@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.7.8  Last change: 2015 June 11
+*vifm-app.txt*    For Vifm version 0.7.8  Last change: 2015 June 12
 
  Email for bugs and suggestions: <xaizek@openmailbox.org>
 
@@ -2736,12 +2736,13 @@ Full path to the shell to use to run external commands.
                                                *vifm-'shortmess'* *vifm-'shm'*
 shortmess shm
 type: charset
-default: ""
+default: "p"
 
 Contains a sequence of single-character flags.  Each flag enables shortening
 of some message displayed by vifm in the TUI.  Flags:
-T - truncate status-bar messages in the middle if they are too long to fit on
-    the command line.  "..." will appear in the middle.
+  T - truncate status-bar messages in the middle if they are too long to fit on
+      the command line.  "..." will appear in the middle.
+  p - use tilde shortening in view titles.
 
                                                *vifm-'slowfs'*
                                                {only for *nix}
